--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
         </nav>
         <div class="pages col-xs-9">
           <div class="col-xs-10">
-            <div class="well page active" id="about">
+            <div class="well page active" id="home">
               <h1 class="header">Material Design for Bootstrap</h1>
-              <p>  The Deluxe Entrepreneur Platinum Edition 3000++ (D.E.P.E. 3000++) is a toy designed to engage children in thought provoking creation as they express their entrepreneurial spirit. It consists of over 3 dozens pieces, called mods, that can be snapped together. Each piece is a fundamental building block to create complex and varied devices. By snapping together the touchpad with the robot arm you can create a robot arm that is controlled simply by swiping the screen. By attaching the microphone, rotating globe, and several multi colored lights you can create the perfect disco globe that responds to the music. Any idea is just a snap away!</p>
+              <p>  The Deluxe Entrepreneur Platinum Edition ++ (DEPE++) is a toy designed to engage children in thought provoking creation as they express their entrepreneurial spirit. It consists of over 3 dozens pieces, called mods, that can be snapped together. Each piece is a fundamental building block to create complex and varied devices. By snapping together the touchpad with the robot arm you can create a robot arm that is controlled simply by swiping the screen. By attaching the microphone, rotating globe, and several multi colored lights you can create the perfect disco globe that responds to the music. Any idea is just a snap away!</p>
 
               <br>
               <a href="#goal" class="btn btn-primary">Explore</a>
@@ -186,7 +186,7 @@
             </div>
             <div class="well page" id="goal">
               <h1 class="header">Vision</h1>
-                                <p >Families who buy the D.E.P.E. 3000++ should be exposed to new and innovative ideas and their children should be given a chance to grow intellectually and socially. In order to help children learn new concepts the D.E.P.E. 3000++ provides a large selection of possible pieces to work with, each introducing children to new concepts. The touch screen shows children the newest in computer interfacing technology, the robot arm immerses them in robotics, and the resistance circuit allows them to experiment with electrical engineering. In order to help children grow intellectually the D.E.P.E. 3000++ comes with a challenge book, full of different challenging inventions of different levels with instructions on how to build them. Also included is an instructions manual for children to make their own product shows, brochures, and business logos for creating a fake business. The will help children grow socially with their newfound marketing skills and they can make learn how to make a business for their own inventions!</p>
+                                <p >Families who buy the DEPE++ should be exposed to new and innovative ideas and their children should be given a chance to grow intellectually and socially. In order to help children learn new concepts the DEPE++ provides a large selection of possible pieces to work with, each introducing children to new concepts. The touch screen shows children the newest in computer interfacing technology, the robot arm immerses them in robotics, and the resistance circuit allows them to experiment with electrical engineering. In order to help children grow intellectually the DEPE++ comes with a challenge book, full of different challenging inventions of different levels with instructions on how to build them. Also included is an instructions manual for children to make their own product shows, brochures, and business logos for creating a fake business. The will help children grow socially with their newfound marketing skills and they can make learn how to make a business for their own inventions!</p>
               <!-- Simple checkbox with label -->
 
             </div>
@@ -285,46 +285,18 @@
               </style>
             </div>
 
-            <div class="well page" id="toggle-button">
-
-              <h1 class="header">Toggle Button</h1>
-              <div class="togglebutton">
-                <label>
-                  Wi-Fi
-                  <input type="checkbox" checked>
-                </label>
-              </div>
-              <div class="togglebutton">
-                <label>
-                  Bluetooth
-                  <input type="checkbox">
-                </label>
-              </div>
-
-              <style>
-                #toggle-button h2 {
-                  font-size: 18.7199993133545px;
-                  font-weight: bold;
-                  margin-bottom: 30px;
-                  margin-top: 50px;
-                }
-                #toggle-button .togglebutton label {
-                  margin: 20px 10px;
-                  width: 200px;
-                }
-                #toggle-button .togglebutton .toggle {
-                  float: right;
-                }
-              </style>
-            </div>
             <div class="well page" id="sweepstakes">
               <h1 class="header">Enter for a chance to win!</h1>
 
               <div class="inputs">
                   <h4>100 toys availible!</h4>
-                <input type="text" class="form-control floating-label" data-hint="Your name" placeholder="John Smith">
+                  <br>
+                <input type="text" class="form-control" data-hint="Your name" placeholder="John Smith">
+                  <br>
                 <input type="email" class="form-control floating-label" data-hint="A valid email should contain an @ symbol" placeholder="person@email.com">
-
+                  <br>
+                  <button class="btn btn-primary" data-toggle="modal" data-target="#b1">Submit!</button>
+                </div>
                      <style>
                   #input h4 {
                     padding: 14px;
@@ -339,8 +311,7 @@
                   }
                 </style>
 
-              </div>
-                                     <button class="btn btn-primary" data-toggle="modal" data-target="#b1">Submit!</button>
+
               <div id="b1" class="modal fade" tabindex="-1">
                 <div class="modal-dialog">
                   <div class="modal-content">
