--- a/index.html
+++ b/index.html
@@ -135,6 +135,39 @@
 
     <!-- jQuery -->
     <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript">
+window.onload = function () {
+	var chart = new CanvasJS.Chart("chartContainer",
+	{
+		title:{
+			text: "Estimated Breakdown of Reasons for buying DEPE++"
+		},
+		legend:{
+			verticalAlign: "bottom",
+			horizontalAlign: "center"
+		},
+		data: [
+		{
+			indexLabelFontSize: 20,
+			indexLabelFontFamily: "Monospace",
+			indexLabelFontColor: "darkgrey",
+			indexLabelLineColor: "darkgrey",
+			indexLabelPlacement: "outside",
+			type: "pie",
+			showInLegend: true,
+			toolTipContent: "{y} - <strong>#percent%</strong>",
+			dataPoints: [
+				{  y: 70, legendText:"Parents", indexLabel: "Parent's desire" },
+				{  y: 20, legendText:"Children", indexLabel: "Child's desire" },
+				{  y: 10, legendText:"Other",exploded: true, indexLabel: "Other" },
+			]
+		}
+		]
+	});
+	chart.render();
+}
+</script>
+<script type="text/javascript" src="http://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
   </head>
   <body>
@@ -158,6 +191,7 @@
             <li class="withripple" data-target="#goal">Vision</li>
               <li class="withripple" data-target="#timeline">Schedule</li>
             <li class="withripple" data-target="#sweepstakes">Sweepstakes</li>
+              <li class="withripple" data-target="#demographics">Demographics</li>
             <li class="withripple" data-target="#buy">Buy</li>
             <li class="withripple" data-target="#input">Input</li>
             <li class="withripple" data-target="#navbar">Navbar</li>
@@ -178,7 +212,6 @@
             <div class="well page active" id="home">
               <h1 class="header">Material Design for Bootstrap</h1>
               <p>  The Deluxe Entrepreneur Platinum Edition ++ (DEPE++) is a toy designed to engage children in thought provoking creation as they express their entrepreneurial spirit. It consists of over 3 dozens pieces, called mods, that can be snapped together. Each piece is a fundamental building block to create complex and varied devices. By snapping together the touchpad with the robot arm you can create a robot arm that is controlled simply by swiping the screen. By attaching the microphone, rotating globe, and several multi colored lights you can create the perfect disco globe that responds to the music. Any idea is just a snap away!</p>
-
 
             </div>
             <div class="well page" id="goal">
@@ -318,6 +351,13 @@
                   </div>
                 </div>
               </div>
+
+            </div>
+
+            <div class="well page" id="demographics">
+                <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+              <h1 class="header">Vision</h1>
+              <!-- Simple checkbox with label -->
 
             </div>
             <div class="well page" id="navbar">
