--- a/index.html
+++ b/index.html
@@ -171,8 +171,10 @@ window.onload = function () {
 
   </head>
   <body>
-
+<!--
+Credit goes to:
     <a href="https://github.com/FezVrasta/bootstrap-material-design" style="position: absolute; top: 0; left: 0; border: 0; z-index: 10;"><img src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+-->
 
     <div class="header-panel shadow-z-2">
       <div class="container-fluid">
