updates to niceness and accuracy

--- a/index.html
+++ b/index.html
@@ -192,24 +192,12 @@ Credit goes to:
             <li class="withripple" data-target="#sweepstakes">Sweepstakes</li>
               <li class="withripple" data-target="#demographics">Demographics</li>
             <li class="withripple" data-target="#buy">Buy</li>
-            <li class="withripple" data-target="#input">Input</li>
-            <li class="withripple" data-target="#navbar">Navbar</li>
-            <li class="withripple" data-target="#progress-bar">Progress Bar</li>
-            <li class="withripple" data-target="#slider">Slider</li>
-            <li class="withripple">Tabs (To do)</li>
-            <li class="withripple" data-target="#button">Button</li>
-            <li class="withripple">Icon button (To do)</li>
-            <li class="withripple" data-target="#floating-action-button">Floating Action Button</li>
-            <li class="withripple" data-target="#dropdown">Dropdown (Work in progress)</li>
-            <li class="withripple" data-target="#dropdown-menu">Dropdown Menu</li>
-            <li class="withripple" data-target="#dialog">Dialog</li>
-            <li class="withripple" data-target="#shadow">Shadow</li>
           </ul>
         </nav>
         <div class="pages col-xs-9">
           <div class="col-xs-10">
             <div class="well page active" id="home">
-              <h1 class="header">Material Design for Bootstrap</h1>
+              <h1 class="header">Deluxe Entrepreneur Platinum Edition ++ </h1>
               <p>  The Deluxe Entrepreneur Platinum Edition ++ (DEPE++) is a toy designed to engage children in thought provoking creation as they express their entrepreneurial spirit. It consists of over 3 dozens pieces, called mods, that can be snapped together. Each piece is a fundamental building block to create complex and varied devices. By snapping together the touchpad with the robot arm you can create a robot arm that is controlled simply by swiping the screen. By attaching the microphone, rotating globe, and several multi colored lights you can create the perfect disco globe that responds to the music. Any idea is just a snap away!</p>
 
             </div>
