--- a/index.html
+++ b/index.html
@@ -341,9 +341,9 @@ Credit goes to:
 
             </div>
 
-            <div class="well page" id="demographics">
+            <div class="well page" id="demographics" >
                 <h1 class="header">Estimated Breakdown of Reasons for buying DEPE++</h1>
-                <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+                <div id="chartContainer" style="min-height:500px"></div>
               <!-- Simple checkbox with label -->
 
             </div>
