pie chart title change

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ Credit goes to:
             </div>
 
             <div class="well page" id="demographics" >
-                <h1 class="header">Estimated Breakdown of Reasons for buying DEPE++</h1>
+                <h1 class="header">Estimated Breakdown of Reasons for Buying DEPE++</h1>
                 <div id="chartContainer" style="min-height:600px"></div>
               <!-- Simple checkbox with label -->
 
