--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@ window.onload = function () {
 
   </head>
   <body>
+<img src="logo.png" alt="DEPE++" data-canonical-src="logo.png"  style="position: absolute; top: 70px; left: 150px; border: 0; z-index: 10;height:70px">
 <!--
 Credit goes to:
     <a href="https://github.com/FezVrasta/bootstrap-material-design" style="position: absolute; top: 0; left: 0; border: 0; z-index: 10;"><img src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
