--- a/index.html
+++ b/index.html
@@ -192,8 +192,10 @@ Credit goes to:
               <li class="withripple" data-target="#timeline">Schedule</li>
             <li class="withripple" data-target="#sweepstakes">Sweepstakes</li>
               <li class="withripple" data-target="#demographics">Demographics</li>
+              <li class="withripple" data-target="#magad">Magazine Ad</li>
           </ul>
         </nav>
+
         <div class="pages col-xs-9">
           <div class="col-xs-10">
             <div class="well page active" id="home">
@@ -348,6 +350,12 @@ Credit goes to:
               <!-- Simple checkbox with label -->
 
             </div>
+            <div class="well page" id="magad" >
+                <h1 class="header">Magazine Ad</h1>
+                <iframe src="http://docs.google.com/viewer?url=http%3A%2F%2Fjacobedelman.com%2Fdepeplusplus%2FmagazineAd.pdf&embedded=true" width="100%" height="780" style="border: none;"></iframe>
+              <!-- Simple checkbox with label -->
+            </div>
+
             <div class="well page" id="navbar">
               <h1 class="header">Navbar</h1>
 
