--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@ Credit goes to:
             <li class="withripple" data-target="#sweepstakes">Sweepstakes</li>
               <li class="withripple" data-target="#demographics">Demographics</li>
               <li class="withripple" data-target="#magad">Magazine Ad</li>
+              <li class="withripple" data-target="#budget">Budget</li>
           </ul>
         </nav>
 
@@ -355,6 +356,12 @@ Credit goes to:
                 <iframe src="http://docs.google.com/viewer?url=http%3A%2F%2Fjacobedelman.com%2Fdepeplusplus%2FmagazineAd.pdf&embedded=true" width="100%" height="780" style="border: none;"></iframe>
               <!-- Simple checkbox with label -->
             </div>
+            <div class="well page" id="budget" >
+                <h1 class="header">Budget</h1>
+              <iframe width="100%" height="400" style="border:1px solid #ccc" frameborder="0" scrolling="no" src="https://docs.zoho.com/sheet/published.do?rid=ctdnuc6dc9981dbd74e8d913e1ed3976b8767&mode=embed"> </iframe>
+              <!-- Simple checkbox with label -->
+            </div>
+
 
             <div class="well page" id="navbar">
               <h1 class="header">Navbar</h1>
